--- a/templates/authentication/getStarted.html
+++ b/templates/authentication/getStarted.html
@@ -107,220 +107,89 @@
 
         <h1 class="investmentTit" >Our Investment Plans</h1>
             <p class="investmentDesc">We are a responsible firm that enhances your investments
-                by useing modern technology ans investments by using
-                modern technology and investments by using modern
-                technology and continuous monitoring of markets
-                by our experts.
+              by using modern technology and continuous monitoring of markets
+              by our experts.
             </p>
             <p class="investmentPlanText">Choose an investment plan :</p>
+  
+  
+  
+  
+  
     
             <div class="subscriptionsParent">
     
-                <div class="sub1">
-    
-                    <div class="">
-                        <i class="fas fa-alarm-clock"></i>
-                        <h1 class="planHeadText">2 Hour plan</h1>
-                    </div>
+                  <div class="sub1">
                     
-                    <hr class="line" size="0.5" width="10%" color="gray">  
-                    <div class="">
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $100 Earn $150 </p>
-                        </div>
-    
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $250 Earn $375</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $300 Earn $450</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $400 Earn $600</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $500 Earn $750</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $1000 Earn $1500</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $2000 Earn $3000</p>
-                        </div>
-                        
-                    </div>
-    
-                    <hr class="line" size="0.5" width="10%" color="gray">  
-    
-                    <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
-                </div>
-    
-    
-                
-    
-    
-               
-    
-    
-                <div class="sub1">
-    
-                    <div class="">
-                        <i class="fas fa-alarm-clock"></i>
-                        <h1 class="planHeadText">24 Hour plan</h1>
-                    </div>
+                      <h1 class="planHeadText">2 Hour plan</h1>
+                      <hr class="line" size="0.5" width="10%" color="gray">  
+  
+                      <div class="iconAndPrising"> 
+                          <div class="icons">
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              
+                          </div>
+      
+                          <div class="pricing">
+                              <p>Invest $100 Earn $150 </p>
+                              <p>Invest $250 Earn $375</p>
+                              <p>Invest $300 Earn $450</p>
+                              <p>Invest $400 Earn $600</p>
+                              <p>Invest $500 Earn $750</p>
+                              <p>Invest $1000 Earn $1500</p>
+                              <p>Invest $2000 Earn $3000</p>
+                          </div>                      
+                      </div>
+                      <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
+                  </div>
+  
+  
+  
+  
+                  <div class="sub1">
                     
-                    <hr class="line" size="0.5" width="10%" color="gray">  
-                    <div class="">
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $500 Earn $1500 (Min) </p>
-                        </div>
-    
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $600 Earn $1800</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $700 Earn $2100</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $800 Earn $2400</p>
-                        </div>
-                        
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $900 Earn $2700</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $1000 Earn $3000</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $2000 Earn $6000</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $10000 Earn $16000</p>
-                        </div>
-
-                        <div class="checkIconAndText">
-                            <i class="fas fa-check-circle"></i>
-                            <p>Invest $20000 Earn $33000</p>
-                        </div>
-                        
-                    </div>
-    
-                    <hr class="line" size="0.5" width="10%" color="gray">  
-    
-                    <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
-                </div>
-            </div>
+                      <h1 class="planHeadText">24 Hour plan</h1>
+                      <hr class="line" size="0.5" width="10%" color="gray">  
+  
+                      <div class="iconAndPrising"> 
+                          <div class="icons">
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              <i class="fas fa-check-circle"></i>
+                              
+                          </div>
+      
+                          <div class="pricing">
+                              <p>Invest $500 Earn $1500 (Min) </p>
+                              <p>Invest $600 Earn $1800</p>
+                              <p>Invest $700 Earn $2100</p>
+                              <p>Invest $800 Earn $2400</p>
+                              <p>Invest $900 Earn $2700</p>
+                              <p>Invest $1000 Earn $3000</p>
+                              <p>Invest $2000 Earn $6000</p>
+                              <p>Invest $10000 Earn $16000</p>
+                              <p>Invest $20000 Earn $33000</p>
+                          </div>
+  
+                      </div>  
+                      <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
+                  </div>
+  
+              </div>       
+                           
         </section>
-    
-        <script>
-            function goToDeposit() {
-            window.location = "/deposit";
-                }
-
-        </script>
-
-
-   
-
-
-    
-        {% if user.is_authenticated %}
-
-    <footer>
-        
-        <div class="parentDivFooter">
-            <div >
-                <h1 class="footerHeading">Contact us</h1>
-                <ul>
-                    <li>Call us: +44745097856</li>
-                    <br>
-                    <li>Text us: +44745097856</li>
-                    <br>
-                    <li>WhatsApp: +44745097856</li>
-                    <br>
-                    <li>Email us: info@forexbinary.co.uk</li>
-                </ul>
-            </div>
-
-            
-
-            <div >
-                <h1 class="footerHeading">Special links</h1>
-                <ul>
-                    <a href="/"><li>Home</li></a>
-                    <br>
-                    <a href="/getStarted"><li>Get started</li></a>
-                    <br>
-                    <a href="/deposit"><li>Deposit</li></a>
-                    <br>
-                    <a href="/signin"><li>Login</li></a>
-                    <br>
-                    <a href="/signup"><li>Signup</li></a>
-                </ul>
-            </div>
-        </div>
-
-
-        
-        <p class="copyright">Copyright® 2021 Forex Binary| Powered by Forex Binary</p>
-        
-   </footer>
-
-   {% else %}
-   <footer>
-        
-    <div class="parentDivFooter">
-        <div >
-            <h1 class="footerHeading">Contact us</h1>
-            <ul>
-                <li>Call us: +44745097856</li>
-                <br>
-                <li>Text us: +44745097856</li>
-                <br>
-                <li>WhatsApp: +44745097856</li>
-                <br>
-                <li>Email us: info@forexbinary.co.uk</li>
-            </ul>
-        </div>
-
-        
-
-        
-    </div>
-
-
-    
-    <p class="copyright">Copyright® 2021 Forex Binary| Powered by Forex Binary</p>
-    
-</footer>
-{% endif %}
 
 </body>
 </html>
