--- a/templates/authentication/withdraw.html
+++ b/templates/authentication/withdraw.html
@@ -100,8 +100,6 @@
     <section class="depositSection">
         <div class="profileContainer">
 
-            
-
             <div class="topElementsContainer">
             
                     <div class="avatarAndNamecontainer">
@@ -120,13 +118,16 @@
             <hr class="lineBefore" size="0.5" width="100%" color="gray"> 
 
             <div class="wihdrawContainer">
-                <form action="https://formspree.io/f/meqngolr" method="post">
-                    <label for="email">Email:</label><br>
-                    <input type="email" id="" name="Email"><br>
-                    <label for="">Amount to withdraw (in USD):</label><br>
-                    <input type="number" id="" name="Amount to withraw">
-                    <input class="withdrawButton" type="submit" >
-                  </form>
+              <form method="post" action="javascript:openForm()"  >   
+                {% csrf_token %} 
+                <input  type="email" name="email"  placeholder="Enter your email adress" required> 
+                <input  type="number" name:"amount" placeholder="Enter amount(USD)"required> 
+                <input  type="number" name:"amount" placeholder="Enter BTC adddress"required> 
+                <input type="submit" class="depositButton" onsubmit="openForm()"   >
+              </form>
+
+              
+              
             </div>
 
            
@@ -148,82 +149,6 @@
 
    {% endif %}
 
-
-
-
-
-
-
-    {% if user.is_authenticated %}
-
-    <footer>
-        
-        <div class="parentDivFooter">
-            <div >
-                <h1 class="footerHeading">Contact us</h1>
-                <ul>
-                    <li>Call us: +44745097856</li>
-                    <br>
-                    <li>Text us: +44745097856</li>
-                    <br>
-                    <li>WhatsApp: +44745097856</li>
-                    <br>
-                    <li>Email us: info@forexbinary.co.uk</li>
-                </ul>
-            </div>
-
-            
-
-            <div >
-                <h1 class="footerHeading">Special links</h1>
-                <ul>
-                  <a href="/"><li>Home</li></a>
-                  <br>
-                  <a href="/getStarted"><li>Get started</li></a>
-                  <br>
-                  <a href="/deposit"><li>Deposit</li></a>
-                  <br>
-                  <a href="/signin"><li>Login</li></a>
-                  <br>
-                  <a href="/signup"><li>Signup</li></a>
-                </ul>
-            </div>
-        </div>
-
-
-        
-        <p class="copyright">Copyright® 2021 Forex Binary| Powered by Forex Binary</p>
-        
-   </footer>
-
-   {% else %}
-   <footer>
-        
-    <div class="parentDivFooter">
-        <div >
-            <h1 class="footerHeading">Contact us</h1>
-            <ul>
-                <li>Call us: +44745097856</li>
-                <br>
-                <li>Text us: +44745097856</li>
-                <br>
-                <li>WhatsApp: +44745097856</li>
-                <br>
-                <li>Email us: info@forexbinary.co.uk</li>
-            </ul>
-        </div>
-
-        
-
-        
-    </div>
-
-
-    
-    <p class="copyright">Copyright® 2021 Forex Binary| Powered by Forex Binary</p>
-    
-</footer>
-{% endif %}
 
 </body>
 </html>
